# pacman-pygame

./: .gitignore  pyproject.toml
app/: pacman.py
