[tool.poetry]
name = "pacman-pygame"
version = "0.1.0"
description = "Projeto de criação de um jogo dos anos 80 na Biblioteca Pygame."
authors = ["Sander Toledo <sanderaugusto@gmail.com>"]
license = "mit"
readme = "README.md"
packages = [{include = "pacman_pygame"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
